--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# pre-rendering dependencies from server
+build-tasks.js
+queries.js
+.env
+
+# images
+/public/images
