--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.11.5",
+    "ify-loader": "^1.1.0",
+    "next": "^9.5.3",
+    "pg": "^8.3.3",
+    "plotly.js": "^1.55.1",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-plotly.js": "^2.4.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "regenerator-runtime": "^0.13.7"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build && node ./build-tasks.js",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "/static/",
+  "proxy": "http://rgctypes2.eba-fpmw83pv.us-east-2.elasticbeanstalk.com/",
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
